<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/xsmall" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/wizard_btn_finish"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            style="@style/WizarHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium"
            android:drawableLeft="@drawable/ic_settings"
            android:text="@string/settings" />

        <TextView
            android:id="@+id/wizard_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connectionSuccess" />
    </LinearLayout>

    <Button
        android:id="@+id/wizard_btn_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:drawableLeft="@drawable/ic_navigation_accept"
        android:drawablePadding="@dimen/xsmall"
        android:enabled="false"
        android:text="@string/wait" />

</RelativeLayout>